--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="olvide_contrasena">Olvidé mi Contraseña</string>
     <string name="no_registrado">No Estoy Registrado</string>
     <string name="cancelar_pdf">Cancelar PDF</string>
+    <string name="cargar_archivo">Cargar Archivo</string>
 </resources>
